docs: swagger RoomController
